fixed alignment of profile grid

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  font-family: century-gothic, sans-serif;
+}
+
 body {
   display: grid;
   grid-template-columns: 1fr 5fr;
@@ -14,6 +18,7 @@ body {
 }
 
 .header {
+  height: 200px;
   background-color: rgb(255, 255, 255);
   grid-column: 2/3;
   grid-row: 1/2;
@@ -90,30 +95,40 @@ i::before {
 
 .profile {
   grid-column: 1/3;
-
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  align-items: center;
 }
 .account {
   grid-column: 3/4;
   grid-row: 1/2;
-  display:flex;
-  justify-content:flex-end;
-
+  display: flex;
+  justify-content: flex-end;
 }
 
-.account>h4{
-  display:inline;
+.account > h4 {
+  display: inline;
 }
 
-.buttons{
-  display:flex;
+.buttons {
+  display: flex;
   justify-content: space-evenly;
 }
 
-.buttons > button{
-  padding:10px 40px;
-  color:white;
-  background-color:rgb(58, 117, 227);
-  border:none;
-  border-radius:20px;
+.buttons > button {
+  padding: 10px 40px;
+  color: white;
+  background-color: rgb(58, 117, 227);
+  border: none;
+  border-radius: 20px;
   font-family: inherit;
+}
+
+.profile > img {
+  grid-column: 1/2;
+  justify-self: center;
+}
+
+.profile > span > * {
+  margin: 0;
 }
